translate tutorial/index.html

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CodeIgniter Features : CodeIgniter User Guide</title>
+<title>基本簡介 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -59,28 +59,28 @@
 
 <h1>指導手冊 &minus; 基本簡介</h1>
 
-<p>This tutorial is intended to introduce you to the CodeIgniter framework and the basic principles of MVC architecture. It will show you how a basic CodeIgniter application is constructed in step-by-step fashion.</p> 
+<p>這篇教學旨在向你介紹 CodeIgniter 框架以及 MVC 架構的基本原則。它將一步步的告訴你一個基本的 CodeIgniter 程式是如何建構的。</p>
 
-<p>In this tutorial, you will be creating a <strong>basic news application</strong>. You will begin by writing the code that can load static pages. Next, you will create a news section that reads news items from a database. Finally, you'll add a form to create news items in the database.</p>
+<p>在這篇教學裡，你將會製作一個<strong>簡單的新聞程式</strong>。你將從使用程式來讀取靜態頁面開始。接著，你會製作一個新聞模組，可以從資料庫讀取新聞項目。最後你會增加一個表單，用來在資料庫中增加新聞項目。</p>
 
-<p>This tutorial will primarily focus on:</p>
+<p>這篇教學主要會專注在：</p>
 <ul>
-<li>Model-View-Controller basics</li>
-<li>Routing basics</li>
-<li>Form validation</li>
-<li>Performing basic database queries using &quot;Active Record&quot;</li>
+<li>Model-View-Controller 基礎知識</li>
+<li>路由（Routing）基礎知識</li>
+<li>表單驗證</li>
+<li>使用 &quot;Active Record&quot; 來做簡單的資料庫查詢</li>
 </ul>
 
-<p>The entire tutorial is split up over several pages, each explaining a small part of the functionality of the CodeIgniter framework. You'll go through the following pages:</p>
+<p>整篇教學被分為數個部份進行，每一部份解釋 CodeIgniter 框架的一小部份功能。祥列如下：</p>
 <ul>
-<li>Introduction, this page, which gives you an overview of what to expect.</li>
-<li><a href="static_pages.html">Static pages</a>, which will teach you the basics of controllers, views and routing.</li>
-<li><a href="news_section.html">News section</a>, where you'll start using models and will be doing some basic database operations.</li>
-<li><a href="create_news_items.html">Create news items</a>, which will introduce more advanced database operations and form validation.</li>
-<li><a href="conclusion.html">Conclusion</a>, which will give you some pointers on further reading and other resources.</li>
+<li>簡介，也就是目前這一頁，給你一些概念讓你知道接下來會做些什麼。</li>
+<li><a href="static_pages.html">靜態頁面</a>，將會教你關於控制器（Controller），檢視（View)與路由的基礎知識。</li>
+<li><a href="news_section.html">新聞模組</a>，這邊你將開始使用模型（Model），並且進行一些簡單的資料庫操作。</li>
+<li><a href="create_news_items.html">新增新聞項目</a>，將會進行更進階的資料庫操作以及表單驗證。</li>
+<li><a href="conclusion.html">結論</a>，將會指引你一些未來的學習方向以及其它資源。</li>
 </ul>
 
-<p>Enjoy your exploration of the CodeIgniter framework.</p>
+<p>祝你在 CodeIgniter 框架的探索中旅途愉快。</p>
 
 </div>
 <!-- END CONTENT -->
