--- a/tutorial/static_pages.html
+++ b/tutorial/static_pages.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CodeIgniter Features : CodeIgniter User Guide</title>
+<title>靜態頁面 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -59,20 +59,18 @@
 
 <h1>指導手冊 &minus; 靜態頁面</h1>
 
-<p class="important"><strong>Note:</strong> This tutorial assumes you've downloaded CodeIgniter and <a href="../installation/index.html">installed the framework</a> in your development environment.</p>
+<p class="important"><strong>注意：</strong>這篇教學假設你已經下載了 CodeIgniter 並且<a href="../installation/index.html">已經安裝</a>在你的開發環境中。</p>
 
-<p>The first thing you're going to do is set up a <strong>controller</strong> to handle static pages.
-A controller is simply a class that helps delegate work. It is the glue of your
-web application.</p>
+<p>你要做的第一件事情是設置一個<strong>控制器（Controller）</strong>來處理靜態頁面。
+控制器是一個簡單的類別來幫助委派工作。它是你的網頁應用程式中的膠水。</p>
 
-<p>For example, when a call is made to: <code>http://example.com/news/latest/10</code> We might imagine
-that there is a controller named &quot;news&quot;. The method being called on news
-would be &quot;latest&quot;. The news method's job could be to grab 10
-news items, and render them on the page. Very often in MVC, you'll see URL
-patterns that match: <code>http://example.com/[controller-class]/[controller-method]/[arguments]</code>
-As URL schemes become more complex, this may change. But for now, this is all we will need to know.</p>
+<p>例如，當瀏覽器發出一個請求給：<code>http://example.com/news/latest/10</code>
+我們可以想像那邊有個控制器名為 &quot;news&quot; 。而 news 控制器將會被呼叫的方法(method)為 &quot;latest&quot; 。
+這個 latest 方法的工作可能是抓取十個新聞項目，並顯示在頁面上。這在 MVC 中很常見，你看到的 URL 格式將會是這樣：
+<code>http://example.com/[控制器類別]/[控制器方法]/[參數們]</code>
+當 URL 變得更複雜時這可能會改變。但目前來說這就是我們所需要知道的全部了。</p>
 
-<p>Create a file at <dfn>application/controllers/pages.php</dfn> with the following code.</p>
+<p>在 <dfn>application/controllers/pages.php</dfn> 創建一個檔案，填入下面的程式。</p>
 
 <textarea class="textarea" style="width:100%" cols="50" rows="10">
 &lt;?php
@@ -86,35 +84,32 @@ class Pages extends CI_Controller {
 }
 </textarea>
 
-<p>You have created a class named &quot;pages&quot;, with a view method that accepts one argument named <var>$page</var>.
-The pages class is extending the CI_Controller class.
-This means that the new pages class can access the methods and variables defined in the CI_Controller class
-(<dfn>system/core/Controller.php</dfn>).</p>
+<p>你創建了一個類別名為 &quot;pages&quot; ，並且有一個view方法，接受一個參數名為 <var>$page</var> 。這個 pages 類別繼承了 CI_Controller 類別。
+代表這個新的 pages 類別可以存取在 CI_Controller 類別(<dfn>system/core/Controller.php</dfn>)中定義的方法以及變數。</p>
 
-<p>The <strong>controller is what will become the center of every request</strong> to your web application.
-In very technical CodeIgniter discussions, it may be referred to as the <em>super object</em>.
-Like any php class, you refer to it within your controllers as <var>$this</var>.
-Referring to <var>$this</var> is how you will load libraries, views, and generally
-command the framework.</p>
+<p>對你的網頁應用程式而言，<strong>控制器將會成為所有請求的中心</strong>。
+用 CodeIgniter 的術語來說，它可以做為<em>超級物件</em>來使用。
+就像所有的 php 類別，你在你的控制器中可以使用 <var>$this</var> 來存取它。
+並且，當你要載入程式庫，載入檢視以及控制 CodeIgniter 時，也是使用 <var>$this</var> 來做。</p>
 
-<p>Now you've created your first method, it's time to make some basic page templates.
-We will be creating two &quot;views&quot; (page templates) that act as our page footer and header.</p>
+<p>現在你建立了你的第一個方法，是時候來建立一些基本的頁面模板了。
+我們將會建立兩個 &quot;views&quot; （頁面模板）來做為我們頁面的 header 與 footer。</p>
 
-<p>Create the header at <dfn>application/views/templates/header.php</dfn> and add the following code.</p>
+<p>在 <dfn>application/views/templates/header.php</dfn> 建立 header 並且加入以下的程式碼。</p>
 
 <textarea class="textarea" style="width:100%" cols="50" rows="8">
 <html>
 <head>
-	<title><?php echo $title ?> - CodeIgniter 2 Tutorial</title>
+	<title><?php echo $title ?> - CodeIgniter 2 教學</title>
 </head>
 <body>
-	<h1>CodeIgniter 2 Tutorial</h1>
+	<h1>CodeIgniter 2 教學</h1>
 	
 </textarea>
 
-<p>The header contains the basic HTML code that you'll want to display before loading the main view, together with a heading. 
-It will also output the <var>$title</var> variable, which we'll define later in the controller.
-Now create a footer at <dfn>application/views/templates/footer.php</dfn> that includes the following code:</p>
+<p>這個 header 放的是你想要在主畫面之前顯示的基本 HTML 代碼，裡面包含了 HTML head。
+它也顯示了 <var>$title</var> 變數，我們待會會在控制器中定義它。
+現在在 <dfn>application/views/templates/footer.php</dfn> 建立 footer 檔案，裡面包含下列代碼：</p>
 	
 <textarea class="textarea" style="width:100%" cols="50" rows="4">
 <strong>&#38;copy; 2011</strong>	
@@ -122,16 +117,16 @@ Now create a footer at <dfn>application/views/templates/footer.php</dfn> that in
 </html>
 </textarea>
 
-<h2>Adding logic to the controller</h2>
+<h2>在控制器中增加邏輯</h2>
 
-<p>Earlier you set up a controller with a view() method. The method accepts one parameter, which is the name of the page to be loaded.
-The static page templates will be located in the <dfn>application/views/pages/</dfn> directory.</p>
+<p>剛才你設置了控制器以及一個 view() 方法。這個方法接受一個參數，這個參數就是將要被讀取的頁面名稱。
+靜態頁面的模板將會放在 <dfn>application/views/pages/</dfn> 資料夾。</p>
 
-<p>In that directory, create two files named <dfn>home.php</dfn> and <dfn>about.php</dfn>. 
-Within those files, type some text &minus; anything you'd like &minus; and save them. 
-If you like to be particularly un-original, try &quot;Hello World!&quot;.</p>
+<p>在那個資料夾裡，建立兩個檔案並命名為 <dfn>home.php</dfn> 以及 <dfn>about.php</dfn> 。
+在這兩個檔案裡打一些字&minus;隨便你想打什麼&minus;然後存檔。
+如果你喜歡老套的，就放&quot;Hello World!&quot;。</p>
 
-<p>In order to load those pages, you'll have to check whether the requested page actually exists:</p>
+<p>在讀取這些頁面之前，你必須去確認所要求的頁面是存在的：</p>
 
 <pre>
 public function view($page = 'home')
@@ -139,11 +134,11 @@ public function view($page = 'home')
 			
 	if ( ! file_exists('application/views/pages/'.$page.'.php'))
 	{
-		// Whoops, we don't have a page for that!
+		// 哇勒!我們沒有這個頁面!
 		show_404();
 	}
 	
-	$data['title'] = ucfirst($page); // Capitalize the first letter
+	$data['title'] = ucfirst($page); // 第一個字母大寫
 	
 	$this->load->view('templates/header', $data);
 	$this->load->view('pages/'.$page, $data);
@@ -152,40 +147,44 @@ public function view($page = 'home')
 }
 </pre>
 
-<p>Now, when the page does exist, it is loaded, including the header and footer, and displayed to the user. If the page doesn't exist, a "404 Page not found" error is shown.</p>
+<p>現在，當頁面存在時，它將會被讀取然後顯示給使用者，包含了 header 與 footer 。如果頁面不存在，將會顯示錯誤訊息"404 Page not found"。</p>
 
-<p>The first line in this method checks whether the page actually exists. PHP's native <var>file_exists()</var> function is used to check whether the file is where it's expected to be. <var>show_404()</var> is a built-in CodeIgniter function that renders the default error page.</p>
+<p>在這個方法中的第一行檢查了頁面檔案是否存在。PHP的原生函式 <var>file_exists()</var> 用來檢查檔案是否在預期的地方。
+<var>show_404()</var> 是 CodeIgniter 內建的函式，用來顯示預設的錯誤訊息頁面。</p>
 
-<p>In the header template, the <var>$title</var> variable was used to customize the page title. The value of title is defined in this method, but instead of assigning the value to a variable, it is assigned to the title element in the <var>$data</var> array.</p>
+<p>在 header 模板裡， <var>$title</var> 變數用來客製頁面的標題。
+在view方法中我們給標題設定了值，但我們不是將值設定給變數，而是設定給 <var>$data</var> 陣列裡面的 title 元素。</p>
 
-<p>The last thing that has to be done is loading the views in the order they should be displayed.
-The second parameter in the <var>view()</var> method is used to pass values to the view. Each value in the <var>$data</var> array is assigned to a variable with the name of its key. So the value of <var>$data['title']</var> in the controller is equivalent to $title in the view.<p>
+<p>最後要做的事情是按照順序來讀取檢視。在 <var>view()</var> 方法中的第二個參數是用來傳值給檢視用的。
+<var>$data</var> 陣列中的每個值會依照其陣列索引鍵值來存放到同名的變數中。
+所以在控制器中 <var>$data['title']</var> 的值等同於檢視中的 $title 。</p>
 	
-<h2>Routing</h2>
+<h2>路由</h2>
 
-<p>The controller is now functioning! Point your browser to <dfn>[your-site-url]index.php/pages/view</dfn> to see your page. When you visit <dfn>index.php/pages/view/about</dfn> you'll see the about page, again including the header and footer.</p>
+<p>控制器現在可以運作了！打開你的瀏覽器並前往 <dfn>[你的網址]index.php/pages/view</dfn> 來瞧瞧你的網頁。
+當你訪問 <dfn>index.php/pages/view/about</dfn> 時你將會看到 about 頁面，並且包含了 header 與 footer。</p>
 
-<p>Using custom routing rules, you have the power to map any URI to any controller and method, and break free from the normal convention:
+<p>使用自訂的路由規則，你就擁有將任何 URI 對應到任何控制器與方法的力量，並且掙脫了這個慣例：
 <code>http://example.com/[controller-class]/[controller-method]/[arguments]</code></p>
 
-<p>Let's do that. Open the routing file located at <dfn>application/config/routes.php</dfn> and add the following two lines. Remove all other code that sets any element in the <var>$route</var> array.</p>
+<p>就讓我們試試看。打開位於 <dfn>application/config/routes.php</dfn> 的路由檔案，增加下列兩行。
+並將其它設置 <var>$route</var> 陣列的程式碼都移除。</p>
 	
 <pre>
 $route['default_controller'] = 'pages/view';
 $route['(:any)'] = 'pages/view/$1';
 </pre>
 
-<p>CodeIgniter reads its routing rules from top to bottom and routes the request to the first matching rule. Each rule is a regular expression
-(left-side) mapped to a controller and method name separated by slashes (right-side).
-When a request comes in, CodeIgniter looks for the first match, and calls the appropriate controller and method, possibly with arguments.</p>
+<p>CodeIgniter 由上而下讀取這個路由規則，並且將請求導向第一個符合的規則。
+每一個規則都是正則表達式（位於左側），對應到由反斜線分隔的控制器與方法（位於右側）。
+當一個請求進來，CodeIgniter 找出第一個符合的規則，然後呼叫其控制器與方法，可能還包含了參數。</p>
 
-<p>More information about routing can be found in the URI Routing <a href="../general/routing.html">documentation</a>.</p>
+<p>關於路由的更多資訊可以在<a href="../general/routing.html"> URI 路由的文件</a>中找到</p>
 
-<p>Here, the second rule in the <var>$routes</var> array matches <strong>any</strong> request using the wildcard string <dfn>(:any)</dfn>.
-and passes the parameter to the view() method of the pages class.</p>
+<p>在這邊， <var>$routes</var> 陣列中的第二條規則使用了萬用字串 <dfn>(:any)</dfn> ，它將會符合<strong>任何的</strong>請求。
+並將參數傳送給 pages 類別中的 view() 方法。</p>
 
-<p>Now visit <dfn>index.php/about</dfn>. Did it get routed correctly to the <var>view()</var> method
-in the pages controller? Awesome!</p>
+<p>現在，訪問 <dfn>index.php/about</dfn> 。是不是被正確的導到 pages 控制器中的 <var>view()</var> 方法呢？太神奇了！！</p>
 
 </div>
 <!-- END CONTENT -->
