translate create_news_items.html and conclusion.html

--- a/tutorial/conclusion.html
+++ b/tutorial/conclusion.html
@@ -59,13 +59,23 @@
 
 <h1>指導手冊 - 結論</h1>
 
-<p>This tutorial did not cover all of the things you might expect of a full-fledged content management system, but it introduced you to the more important topics of routing, writing controllers, and models. We hope this tutorial gave you an insight into some of CodeIgniter's basic design patterns, which you can expand upon.</p>
+<p>This tutorial did not cover all of the things you might expect of a full-fledged content management system, 
+but it introduced you to the more important topics of routing, writing controllers, and models. 
+We hope this tutorial gave you an insight into some of CodeIgniter's basic design patterns, which you can expand upon.</p>
+<p>這篇教學無法涵蓋一個完整的內容管理系統所需要的東西，但是它介紹了更重要的主題：路由、控制器與模型。我們希望這篇教學可以使你洞察一些 CodeIgniter 的基本設計模式，並讓你可以在這基礎上進行擴展。</p>
 
-<p>Now that you've completed this tutorial, we recommend you check out the rest of the documentation. CodeIgniter is often praised because of its comprehensive documentation. Use this to your advantage and read the "Introduction" and "General Topics" sections thoroughly. You should read the class and helper references when needed.</p>
+<p>Now that you've completed this tutorial, we recommend you check out the rest of the documentation. 
+CodeIgniter is often praised because of its comprehensive documentation. 
+Use this to your advantage and read the "Introduction" and "General Topics" sections thoroughly. 
+You should read the class and helper references when needed.</p>
+<p>現在你已經完成了這個教學，我們建議你看一看手冊的其它部份。CodeIgniter 常常因為擁有完整的文件而被稱讚。你可以好好的利用這個優勢，完整的閱讀"簡介"與"一般主題"。
+當有需要時，你也應該閱讀類別參考與補助函式參考。</p>
 
 <p>Every intermediate PHP programmer should be able to get the hang of CodeIgniter within a few days.</p>
+<p>任何一個中階的 PHP 開發者應該都能夠在幾天內掌握使用 CodeIgniter 的訣竅。</p>
 
 <p>If you still have questions about the framework or your own CodeIgniter code, you can:</p>
+<p>如果你對於 CodeIgniter 框架或是對於你的 CodeIgniter 程式有問題，你可以在這邊尋求協助：</p>
 <ul>
 	<li>台灣 <a href="http://codeigniter.org.tw/forum/">論壇</a></li>
 	<li>台灣 <a href="http://www.codeigniter.org.tw/irc">IRC 聊天室</a></li>
