--- a/tutorial/create_news_items.html
+++ b/tutorial/create_news_items.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CodeIgniter Features : CodeIgniter User Guide</title>
+<title>動態新增新聞 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -59,35 +59,37 @@
 
 <h1>指導手冊 - 動態新增新聞</h1>
 
-<p>You now know how you can read data from a database using CodeIgnite, but you haven't written any information to the database yet. In this section you'll expand your news controller and model created earlier to include this functionality.</p>
+<p>你現在知道如何使用 CodeIgniter 從資料庫中讀取資料，但資料庫中尚未寫入任何資訊。在這一章節你將會擴充你先前做的 news 控制器及模型來增加這個功能。</p>
 
-<h2>Create a form</h2>
+<h2>建立一個表單</h2>
 
-<p>To input data into the database you need to create a form where you can input the information to be stored. This means you'll be needing a form with two fields, one for the title and one for the text. You'll derive the slug from our title in the model. Create the new view at <dfn>application/views/news/create.php</dfn>.</p>
+<p>為了要輸入資料到資料庫當中，你需要建立一個表單讓你可以輸入要儲存的資訊。這代表你需要一個有兩個欄位的表單，一個用來輸入標題，另一個輸入內文。
+你將會在模型中將標題製成 slug，現在到 <dfn>application/views/news/create.php</dfn> 建立新的檢視。</p>
 
 <textarea class="textarea" style="width:100%" cols="50" rows="16">
-<h2>Create a news item</h2>
+<h2>建立新聞項目</h2>
 
 &lt;?php echo validation_errors(); ?>
 
 &lt;?php echo form_open('news/create') ?>
 
-	<label for="title">Title</label> 
+	<label for="title">標題</label> 
 	<input type="input" name="title" /><br />
 
-	<label for="text">Text</label>
+	<label for="text">內文</label>
 	<textarea name="text">&lt;/textarea><br />
 	
-	<input type="submit" name="submit" value="Create news item" /> 
+	<input type="submit" name="submit" value="建立新聞項目" /> 
 
 &lt;/form>
 </textarea>
 
-<p>There are only two things here that probably look unfamiliar to you: the <dfn>form_open()</dfn> function and the <dfn>validation_errors()</dfn> function.</p>
+<p>裡面只有兩個東西你可能不熟悉：<dfn>form_open()</dfn> 函數以及 <dfn>validation_errors()</dfn> 函數。</p>
 
-<p>The first function is provided by the <a href="../helpers/form_helper.html">form helper</a> and renders the form element and adds extra functionality, like adding a hidden <a href="../libraries/security.html">CSFR prevention field</a>. The latter is used to report errors related to form validation.</p>
+<p>第一個函數是由 <a href="../helpers/form_helper.html">Form 輔助函數</a> 所提供的，它將會顯示表單元素並增加一些額外功能。
+例如增加一個隱藏的 <a href="../libraries/security.html">CSFR 預防欄位</a>。第二個函數則是當表單驗證錯誤時，用來顯示錯誤訊息。</p>
 
-<p>Go back to your news controller. You're going to do two things here, check whether the form was submitted and whether the submitted data passed the validation rules. You'll use the <a href="../libraries/form_validation.html">form validation</a> library to do this.</p>
+<p>回到你的 news 控制器。在這邊你將要做兩件事情，檢查是否有表單被送出，以及送出的資料是否通過驗證規則。我們將使用 <a href="../libraries/form_validation.html">Form Validation</a> 程式庫來做這件事。</p>
 
 <pre>
 public function create()
@@ -97,8 +99,8 @@ public function create()
 	
 	$data['title'] = 'Create a news item';
 	
-	$this->form_validation->set_rules('title', 'Title', 'required');
-	$this->form_validation->set_rules('text', 'text', 'required');
+	$this->form_validation->set_rules('title', '標題', 'required');
+	$this->form_validation->set_rules('text', '內文', 'required');
 	
 	if ($this->form_validation->run() === FALSE)
 	{
@@ -115,15 +117,18 @@ public function create()
 }
 </pre>
 
-<p>The code above adds a lot of functionality. The first few lines load the form helper and the form validation library. After that, rules for the form validation are set. The <var>set_rules()</var> method takes three arguments; the name of the input field, the name to be used in error messages, and the rule. In this case the title and text fields are required.</p>
+<p>上面這段程式增加了許多功能。開頭前幾行用來載入 Form 輔助函數以及 Form Validation 程式庫。接著是設定表單驗證的規則。
+<var>set_rules()</var> 方法需要三個參數，輸入欄位的名稱，用來顯示在錯誤訊息中的名稱，以及規則。在這個例子中使用的規則，用來表示標題及內文都是必要的欄位。</p>
 
-<p>CodeIgniter has a powerful form validation library as demonstrated above. You can read <a href="../libraries/form_validation.html">more about this library here</a>.</p>
+<p>如上面的範例， CodeIgniter 有一個強力的表單驗證程式庫。你可以在這邊閱讀<a href="../libraries/form_validation.html">更多關於表單驗證的資訊</a>。</p>
 
-<p>Continuing down, you can see a condition that checks whether the form validation ran successfully. If it did not, the form is displayed, if it was submitted <strong>and</strong> passed all the rules, the model is called. After this, a view is loaded to display a success message. Create a view at <dfn>application/view/news/success.php</dfn> and write a success message.</p>
+<p>繼續往下看，你可以看到一個條件式用來檢查表單驗證是否成功。若是沒有，就會顯示表單，若是表單已被送出 <strong>並且</strong> 通過了驗證，模型就會被呼叫。
+接著一個檢視會被載入並顯示成功訊息。請在 <dfn>application/view/news/success.php</dfn> 建立一個檢視並寫入成功訊息。</p>
 
-<h2>Model</h2>
+<h2>模型</h2>
 
-<p>The only thing that remains is writing a method that writes the data to the database. You'll use the Active Record class to insert the information and use the input library to get the posted data. Open up the model created earlier and add the following:</p>
+<p>最後一件事就是寫一個方法來將資料存進資料庫。你將會使用 Active Record 類別來新增這資訊，並使用 Input 程式庫來取得表單送出的資料。
+打開之前建立的模型，並加入下列程式碼：</p>
 
 <pre>
 public function set_news()
@@ -142,13 +147,17 @@ public function set_news()
 }
 </pre>
 
-<p>This new method takes care of inserting the news item into the database. The third line contains a new function, <dfn>url_title()</dfn>. This function - provided by the <a href="../helpers/url_helper.html">URL helper</a> - strips down the string you pass it, replacing all spaces by dashes (-) and makes sure everything is in lowercase characters. This leaves you with a nice slug, perfect for creating URIs.</p>
+<p>這個新方法用來新增資料到資料庫中。在第三行有個新的 <dfn>url_title()</dfn> 函數。這個函數 - 由 <a href="../helpers/url_helper.html">URL 輔助函數</a>提供 -
+會讀取你傳入的字串，使用破折號 (-) 來替換掉空白，並將所有字串轉為小寫。最後會產生一個很好的 slug ，非常適合用來建立 URI 。</p>
 	
-<p>Let's continue with preparing the record that is going to be inserted later, inside the <var>$data</var> array. Each element corresponds with a column in the database table created earlier. You might notice a new method here, namely the <dfn>post()</dfn> method from the <a href="../libraries/input.html">input library</a>. This method makes sure the data is sanitized, protecting you from nasty attacks from others. The input library is loaded by default. At last, you insert our <var>$data</var> array into our database.</p>
+<p>我們繼續處理等會要存入的資料，將其放進 <var>$data</var> 陣列中。陣列中的每個元素都對應到我們建立的資料庫中的欄位。
+你可能注意到這邊有個新的函數叫做 <dfn>post()</dfn> ，它來自 <a href="../libraries/input.html">Input 程式庫</a>。
+這個方法用來確保資料已經被消毒，可以避免你受到令人討厭的攻擊。而這個程式庫預設就會被自動載入。最後，我們將 <var>$data</var> 存入資料庫當中。</p>
 
-<h2>Routing</h2>
+<h2>路由</h2>
 
-<p>Before you can start adding news items into your CodeIgniter application you have to add an extra rule to <dfn>config/routes.php</dfn> file. Make sure your file contains the following. This makes sure CodeIgniter sees 'create' as a method instead of a news item's slug.</p>
+<p>在你開始新增項目進去你的 CodeIgniter 應用程式之前，你需要在 <dfn>config/routes.php</dfn> 中增加額外的規則。
+確認你的檔案中含有下列項目。這讓 CodeIgniter 看到 'create' 時，當作是一個方法，而不是一個新聞的 slug 。</p>
 	
 <pre>
 $route['news/create'] = 'news/create';
@@ -158,7 +167,8 @@ $route['(:any)'] = 'pages/view/$1';
 $route['default_controller'] = 'pages/view';
 </pre>
 
-<p>Now point your browser to your local development environment where you installed CodeIgniter and add <dfn>index.php/news/create</dfn> to the URL. Congratulations, you just created your first CodeIgniter application! Add some news and check out the different pages you made.</p>
+<p>現在打開你的瀏覽器並輸入你的 CodeIgniter 根目錄網址，並在後面加上 <dfn>index.php/news/create</dfn> 。
+恭喜你，你剛剛建立了你的第一個 CodeIgniter 應用程式！增加一些新聞並逛一逛你所建立的其它頁面。</p>
 
 </div>
 <!-- END CONTENT -->
