--- a/changelog.html
+++ b/changelog.html
@@ -57,6 +57,26 @@
 
 <h1>版本紀錄</h1>
 
+<h2>版本 2.1.4</h2>
+<p>發佈日期: July 8, 2013</p>
+
+
+<ul>
+    <li>一般變更
+        <ul>
+            <li>改善安全性函式 <kbd>xss_clean()</kbd>.</li>
+        </ul>
+    </li>
+</ul>
+
+<h3>2.1.4 修正項目:</h3>
+<ul>
+    <li>修正項目 (#1936) - <a href="libraries/migration.html">Migrations Library</a> method <samp>latest()</samp> had a typo when retrieving language values.</li>
+    <li>修正項目 (#2021) - <a href="libraries/migration.html">Migrations Library</a> configuration file was mistakenly using Windows style line feeds.</li>
+    <li>修正項目 (#1969) - <a href="database/active_record.html">Active Record</a> method <samp>set_update_batch()</samp> was using the incorrect variables and would cause an error.</li>
+    <li>修正項目 (#2337) - <a href="libraries/email.html">Email Library</a> method <samp>print_debugger()</samp> was not using <samp>htmlspecialchar()</samp> when being shown in the browser.</li>
+</ul>
+
 <a name="2.1.3"></a>
 <h2>版本 2.1.3</h2>
 <p>發佈日期: October 8, 2012</p>
