translate upgrade_214.html file.
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/installation/upgrade_213.html
+++ b/installation/upgrade_213.html
@@ -44,7 +44,8 @@
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
 從 2.1.2 升級到 2.1.3
 </td>
-<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.org.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+
 </tr>
 </table>
 <!-- END BREADCRUMB -->
@@ -57,7 +58,7 @@
 
 <h1>從 2.1.2 升級到 2.1.3</h1>
 
-<p>在執行升級之前，你可以透過更換 index.php 為靜態檔案，使得網站狀態為 offline。</p>
+<p>在執行升級之前，你可以透過更換 index.php 使得網站狀態為 offline。</p>
 
 <h2>步驟 1: 更新網站 CodeIgniter 檔案</h2>
 
